# info

./: .gitignore  README.md  _config.yml
_layouts/: default.html
informacije-o-kursu/: README.md  samostalni-projekti.md
informacije-o-kursu/tekuce-informacije/: README.md
predavanja/: README.md
predavanja/info/: README.md
predavanja/prezentacije/04-linearno-i-celobrojno-programiranje/04-01-linearno-programiranje/: 07_graficko-resenje.xlsm
primeri-predavanja/: pyproject.toml
primeri-predavanja/04-01-linearno programiranje/: 01-electro-poly-solve.cmd  01_electro_poly.lp  01_electro_poly_lp_gurobipy.py  02_retired_planned_services_gurobi_linopy copy.py  05_upton_production_linopy2.py  06_blue_ridge_tubes_1_linopy.py
primeri-predavanja/04-02-celobrojno-programiranje/: 01_blue_ridge_tubes_2_linopy.py
primeri-predavanja/04-02-celobrojno-programiranje/02-feaver5/: feaver5_linopy.py
primeri-predavanja/04-02-celobrojno-programiranje/03-p-median-problem/: p_median_problem.py  p_median_problem_1.py  p_median_problem_2.py
primeri-predavanja/04-02-celobrojno-programiranje/04-02-03-facility-location/: facility_location_linopy.py
primeri-predavanja/04-02-celobrojno-programiranje/04-02-04-p-median/: pmedian2d.py
primeri-predavanja/04-02-celobrojno-programiranje/05-travleling-salesperson-problem/: traveling_salesperson_problem.py
